--- a/android app/app/src/main/AndroidManifest.xml
+++ b/android app/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- internet jogosultság -->
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -18,23 +18,30 @@
         <activity
             android:name=".RegistrationActivity"
             android:exported="false" />
-        <activity
-            android:name=".ui.login.LoginActivity"
+        <!--  <activity
+              android:name=".ui.login.LoginActivity"
             android:exported="false"
-            android:label="@string/title_activity_login" />
+            android:label="@string/title_activity_login" />-->
         <activity
             android:name=".MainActivity2"
-            android:exported="false" />
+            android:exported="true"
+
+            android:theme="@style/Theme.FilmAjánlóAlkalmazás2"
+            >
+
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+
+        </activity>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.FilmAjánlóAlkalmazás">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            >
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
