--- a/android app/app/src/main/AndroidManifest.xml
+++ b/android app/app/src/main/AndroidManifest.xml
@@ -44,6 +44,10 @@
             android:theme="@style/Theme.FilmAjánlóAlkalmazás2">
 
         </activity>
+        <activity android:name=".WelcomeNavigationActivity"
+            android:exported="false"
+           />
+
     </application>
 
 </manifest>
