--- a/android app/app/src/main/AndroidManifest.xml
+++ b/android app/app/src/main/AndroidManifest.xml
@@ -15,16 +15,18 @@
         android:theme="@style/Theme.FilmAjánlóAlkalmazás2"
         tools:targetApi="31">
         <activity
+            android:name=".TabActivity"
+            android:exported="false" />
+        <activity
             android:name=".NavigationActivity"
             android:exported="true"
             android:label="@string/title_activity_navigation"
-            android:theme="@style/Theme.FilmAjánlóAlkalmazás2" >
+            android:theme="@style/Theme.FilmAjánlóAlkalmazás2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".LoginActivity"
@@ -41,13 +43,10 @@
         <activity
             android:name=".MainActivity2"
             android:exported="true"
-            android:theme="@style/Theme.FilmAjánlóAlkalmazás2">
-
-        </activity>
-        <activity android:name=".WelcomeNavigationActivity"
-            android:exported="false"
-           />
-
+            android:theme="@style/Theme.FilmAjánlóAlkalmazás2"></activity>
+        <activity
+            android:name=".WelcomeNavigationActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
